@@ -1,4 +1,8 @@
 
+R0.1.3  M. Dunning - 2019-03-12
+    - Reduce flood of cryptic error messages printed by driver if a device is disconnected.
+            Now we should only see a sensible message periodically.
+
 R0.1.2  M. Dunning - 2018-08-23
     - Add template files for conversions
     - Example edm screens: make module numbers two digits
